<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Actividad1_Layout</string>

    <string name="welcome">¡Bienvenido!</string>
    <string name="user_name">Kratos</string>
    <string name="how_is_it_going">¿Cómo va tu día hoy?</string>
    <string name="urgent_care">Urgencias</string>

    <string name="our_services">Nuestros Servicios</string>
    <string name="consultation">Consulta</string>
    <string name="medicines">Medicamentos</string>
    <string name="ambulance">Ambulancia</string>

    <string name="appointment">Cita Médica</string>
    <string name="see_all">Ver Todo</string>
    <string name="appointment_date_label">Fecha de la cita</string>
    <string name="appointment_time">Mié 20 Nov  •  8:00 - 8:30 AM</string>

    <string name="doctor_name">Dr. Elva Ginon</string>
    <string name="doctor_specialty">Traumatología</string>

    <string name="cd_profile_avatar">Foto de perfil</string>
    <string name="cd_notification">Campana de notificaciones</string>
    <string name="cd_doctor_image">Imagen del doctor</string>
    <string name="cd_urgent_icon">Icono de urgencias</string>
    <string name="cd_more_options">Más opciones</string>
    <string name="cd_video_badge">Insignia de videollamada</string>
</resources>